2002-07-31  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/propdialogs.c: 
	* lib/propinternals.h: 
	* lib/propobject.c (object_create_props_dialog): 
	Removing the standard (toolbox) properties from defaults dialogs.

2002-07-30  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/font.c (dia_font_scaled_string_width) 
	(dia_font_scaled_ascent, dia_font_scaled_descent): Account for
	zoom factor.
	* lib/text.c (text_calc_boundingbox): Take descent into account.

	* objects/standard/bezier.c (bezierline_draw): 
	* lib/render.c (draw_bezier_with_arrows): 
	Better arrow drawing for beziers.  Doesn't change the mouse-click
	area either.

	* lib/arrows.h: Some const-ness.

	* lib/arrows.c (calculate_arrow_point): Initialize zero-length moves.

	* lib/render.c (draw_arc_with_arrows): 
	* objects/standard/arc.c (arc_draw): Better arrow drawing for
	arcs.  Doesn't change the mouse-click area yet.

	* app/menus.c: Forgotten fix:  Redraw menu item for non-Gnome.

	* lib/render.h: 
	* lib/render.c: 
	Arc arrow prework.

2002-07-29  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/group.c (group_draw): Forgotten commit: Groups to draw as
	objects (using default routines).

	* app/object_ops.h: 
	* app/diagram.h: 
	* lib/diagramdata.h: 
	* lib/diagramdata.c (layer_find_closest_connectionpoint): 
	* objects/standard/zigzagline.c (zigzagline_move_handle): 
	* app/diagram.c (diagram_find_closest_connectionpoint): 
	* plug-ins/python/pydia-diagram.c
	(PyDiaDiagram_FindClosestConnectionPoint):
	* app/object_ops.c (object_connect_display) 
	(object_find_connectpoint_display) 
	* app/create_object.c (create_object_button_press) 
	(create_object_motion): 
	* app/modify_tool.c (modify_motion): 
	Adding object param to allow connectionpoint and handle coinciding.

	* objects/standard/zigzagline.c (zigzagline_check_orientation): 
	Fixing minor problems.

	* objects/standard/ellipse.c (ellipse_update_data): 
	Added direction hints.

	* lib/diagramdata.c: 
	* lib/object.c: 
	* lib/object.h: 